tests/errors/01_undeclared_assignment.f
      PROGRAM UNDECLARED_ASSIGN
      INTEGER A
      B = 1
      END
